tests/invalid/coerce_unreachable.err_exp
coerce_unreachable.m:027: In clause for `p1(in, out)':
coerce_unreachable.m:027:   in coerce:
coerce_unreachable.m:027:   mode error: the input term has instantiatedness
coerce_unreachable.m:027:   `ground',
coerce_unreachable.m:027:   and cannot be converted to the type
coerce_unreachable.m:027:   `coerce_unreachable.citrus'.
For more information, recompile with `-E'.
